--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.1
   get_it: ^7.6.4
+  dio: ^5.3.3
+  firebase_analytics: ^10.5.1
 
 dev_dependencies:
   flutter_test:
