--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_it: ^7.6.4
   dio: ^5.3.3
   firebase_analytics: ^10.5.1
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
