--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_analytics: ^10.5.1
   freezed: ^2.4.5
   build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 dev_dependencies:
   flutter_test:
