--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   freezed: ^2.4.5
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
+  flutter_riverpod: ^2.4.9
+  go_router: ^13.0.0
+  flutter_hooks: ^0.20.4
 
 dev_dependencies:
   flutter_test:
