--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_riverpod: ^2.4.9
   go_router: ^13.0.0
   flutter_hooks: ^0.20.4
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
